--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
-
+  #test
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
